# geodata-extraction

./: .gitignore  Makefile  app.py  readme.md
dependecies/: pyproject.toml
etl/: creation.py  extraction.py  visuals.py
settings/: parameters.py
terrain-image/: get_terrain.py  preferences.json
terrain-image/functions/: creation.py  extraction.py  visuals.py
terrain-image/settings/: get_image.py  image_downloading.py  parameters.py
